@@ -1,6 +1,5 @@
 """Processing Task that calculates the seasonal cycle of sea ice variables in one leg."""
 
-import warnings
 from pathlib import Path
 
 import cf_units
@@ -19,12 +18,14 @@ _meta_dict = {
         "standard_name": "sea_ice_volume",
         "var_name": "sivol",
         "new_unit": "1e3 km3",
+        "old_unit": "m3",
     },
     "siconc": {
         "long_name": "Sea-Ice Area",
         "standard_name": "sea_ice_area",
         "var_name": "siarea",
         "new_unit": "1e6 km2",
+        "old_unit": "m2",
     },
 }
 
@@ -100,6 +101,8 @@ class Si3HemisSumMonthMeanTimeseries(Timeseries):
             this_leg, domain, "T", iris.analysis.SUM
         )
 
+        # sivolu and siarea do not have units assigned, we need to add them manually
+        this_leg_summed.units = cf_units.Unit(_meta_dict[varname]["old_unit"])
         this_leg_summed.standard_name = _meta_dict[varname]["standard_name"]
         this_leg_summed.convert_units(_meta_dict[varname]["new_unit"])
         this_leg_summed.long_name = (
